# SLBackend

./: CMakeLists.txt  Makefile  README.md  build.sh  input.txt
include/: parser.hpp  tokenizer.hpp
src/: main.cpp  parser.cpp  parser.hpp  tokenizer.cpp  tokenizer.hpp  tokenizerREF.c
